--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+bower_components
 
 #### joe made this: http://goel.io/joe
 
