--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "angular-validation-match": "^1.9.0",
     "requirejs": "^2.3.1",
     "domReady": "requirejs-domready#^2.0.1",
-    "angular-aria": "^1.5.8"
+    "angular-aria": "^1.5.8",
+    "angular-ui-tree": "^2.22.0"
   }
 }
