--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.6.0"
+    "mongoose": "^4.6.0",
+    "googleapis": "^13.0.0",
+    "google-auth-library": "^0.9.8"
   },
   "devDependencies": {},
   "scripts": {
