Added Colour coding to folders view
The cloud icon will now change colour to align with the files.  Only 4
alowed for now.  More comming.  Also, Cloud icon chekcin/unchecking
coming soon.

--- a/client/bower.json
+++ b/client/bower.json
@@ -25,6 +25,7 @@
     "domReady": "requirejs-domready#^2.0.1",
     "angular-aria": "^1.5.8",
     "angular-ui-tree": "^2.22.0",
-    "xregexp": "^3.1.1"
+    "xregexp": "^3.1.1",
+    "underscore": "^1.8.3"
   }
 }
