Fixed iOS glitch
Added js hack to fix iOS Safari not properly handling vh and vw in css.
Added bower dep that fixes on broke browsers (iOS isn't the only one,
but the only with the glitch in a recent version).

--- a/client/bower.json
+++ b/client/bower.json
@@ -26,6 +26,7 @@
     "angular-aria": "^1.5.8",
     "angular-ui-tree": "^2.22.0",
     "xregexp": "^3.1.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "viewport-units-buggyfill": "^0.6.0"
   }
 }
