--- a/client/bower.json
+++ b/client/bower.json
@@ -27,6 +27,7 @@
     "angular-ui-tree": "^2.22.0",
     "xregexp": "^3.1.1",
     "underscore": "^1.8.3",
-    "viewport-units-buggyfill": "^0.6.0"
+    "viewport-units-buggyfill": "^0.6.0",
+    "angular-mocks": "^1.5.8"
   }
 }
