--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
     "googleapis": "^13.0.0",
-    "google-auth-library": "^0.9.8"
+    "google-auth-library": "^0.9.8",
+    "mocha": "^3.0.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests",
     "start": "node server.js"
   },
   "repository": {
