--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.6.0",
-    "googleapis": "^13.0.0",
     "google-auth-library": "^0.9.8",
-    "mocha": "^3.0.2"
+    "googleapis": "^13.0.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-requirejs": "^1.1.0",
+    "mocha": "^3.0.2",
+    "mongoose": "^4.6.0",
+    "requirejs": "^2.3.2"
   },
   "devDependencies": {},
   "scripts": {
