--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dbox": "^0.6.1",
     "dropbox": "^2.2.1",
+    "es6-promise": "^3.3.1",
     "express": "^4.14.0",
     "google-auth-library": "^0.9.8",
     "googleapis": "^13.0.0",
@@ -13,18 +15,18 @@
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-requirejs": "^1.1.0",
     "mocha": "^3.0.2",
     "mongoose": "^4.6.0",
-    "requirejs": "^2.3.2",
-    "mongoose": "^4.6.0",
     "passport-dropbox": "^2.0.0",
-    "dbox": "^0.6.1",
-    "es6-promise": "^3.3.1"
+    "requirejs": "^2.3.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha tests",
+    "server-test": "mocha tests",
+    "client-test": "karma start client/karma.conf.js --browsers PhantomJS --single-run",
+    "test": "npm run server-test && npm run client-test",
     "start": "node server.js"
   },
   "repository": {
