basic user functionality, needs polishing

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "karma-requirejs": "^1.1.0",
     "mocha": "^3.0.2",
     "mongoose": "^4.6.0",
+    "passport": "^0.3.2",
     "passport-dropbox": "^2.0.0",
+    "passport-google-oauth": "^1.0.0",
     "requirejs": "^2.3.2"
   },
   "devDependencies": {},
