--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "express": "^4.14.0",
     "google-auth-library": "^0.9.8",
     "googleapis": "^13.0.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-ng-html2js-preprocessor": "^1.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-requirejs": "^1.1.0",
-    "mocha": "^3.0.2",
     "mongoose": "^4.6.0",
     "passport": "^0.3.2",
     "passport-dropbox": "^2.0.0",
     "passport-google-oauth": "^1.0.0",
     "requirejs": "^2.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
+    "mocha": "^3.0.2"
+  },
   "scripts": {
     "server-test": "mocha tests",
     "client-test": "karma start client/karma.conf.js --browsers PhantomJS --single-run",
