--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dropbox": "^2.2.1",
     "es6-promise": "^3.3.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "google-auth-library": "^0.9.8",
     "googleapis": "^13.0.0",
+    "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
     "passport": "^0.3.2",
     "passport-dropbox": "^2.0.0",
