--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
   "devDependencies": {
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-requirejs": "^1.1.0",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "ng-html2js": "^3.0.0"
   },
   "scripts": {
     "server-test": "mocha tests",
+	"client-test-chrome": "karma start client/karma.conf.js --browsers Chrome",
+	"client-test-ie": "karma start client/karma.conf.js --browsers IE",
     "client-test": "karma start client/karma.conf.js --browsers PhantomJS --single-run",
     "test": "npm run server-test || npm run client-test",
     "start": "node server.js"
