--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "dbox": "^0.6.1",
-    "dropbox": "^2.2.1",
     "es6-promise": "^3.3.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
@@ -19,6 +18,7 @@
     "passport": "^0.3.2",
     "passport-dropbox": "^2.0.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-onedrive": "^0.0.4",
     "requirejs": "^2.3.2"
   },
   "devDependencies": {
