--- a/client/bower.json
+++ b/client/bower.json
@@ -27,7 +27,8 @@
         "angular-ui-tree": "^2.22.0",
         "xregexp": "^3.1.1",
         "underscore": "^1.8.3",
-        "viewport-units-buggyfill": "^0.6.0"
+        "viewport-units-buggyfill": "^0.6.0",
+        "angular-cookies": "^1.5.8"
     },
     "devDependencies": {
         "angular-mocks": "^1.5.8"
