--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.3.2",
     "passport-dropbox": "^2.0.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-dropbox-oauth2": "^1.1.0",
     "requirejs": "^2.3.2"
   },
   "devDependencies": {
