--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,17 @@ build/Release
 
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
-node_modules
+node_modules/*
+!node_modules/dbox
+node_modules/dbox/*
+!node_modules/dbox/lib
+node_modules/dbox/lib/*
+!node_modules/dbox/lib/helpers.js
+
 bower_components
+
+# Custom node module ;)
+!node_modules/dbox/lib/helpers.js
 
 #### joe made this: http://goel.io/joe
 
