--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "passport-dropbox-oauth2": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
     "passport-onedrive": "^0.0.4",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "restler": "^3.4.0"
   },
   "devDependencies": {
     "jasmine-core": "^2.5.2",
